UF-7915: Map comfact faultcodes
