# src/integration-test/resources/openapi.yml
@@ -7,7 +7,7 @@ info:
     url: https://opensource.org/licenses/MIT
   version: "1.0"
 servers:
-  - url: http://localhost:55300
+  - url: http://localhost:52636
     description: Generated server url
 tags:
   - name: Signings
@@ -18,6 +18,10 @@ paths:
       tags:
         - Signings
       summary: Get all signing instances.
+      description: "The 'sort' parameter in the Pageable object can take the values\
+        \ 'SigningInstanceId', 'ReferenceNumber', 'CustomerReferenceNumber', 'Created',\
+        \ 'Changed', 'Expires', 'StatusCode', 'StatusMessage', 'UserId', 'Language',\
+        \ 'SignatoryReminderStartDate', 'InitiatorEmailAddress', 'QueueCreated', 'QueueChanged'."
       operationId: getSigningRequests
       parameters:
         - name: pageable
@@ -26,20 +30,6 @@ paths:
           schema:
             $ref: '#/components/schemas/Pageable'
       responses:
-        "400":
-          description: Bad request
-          content:
-            application/problem+json:
-              schema:
-                oneOf:
-                  - $ref: '#/components/schemas/Problem'
-                  - $ref: '#/components/schemas/ConstraintViolationProblem'
-        "500":
-          description: Internal Server error
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
         "200":
           description: Successful operation
           content:
@@ -49,6 +39,32 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/SigningsResponse'
+        "400":
+          description: Bad request
+          content:
+            application/problem+json:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/Problem'
+                  - $ref: '#/components/schemas/ConstraintViolationProblem'
+        "502":
+          description: Bad Gateway
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "404":
+          description: Not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
     post:
       tags:
         - Signings
@@ -61,20 +77,6 @@ paths:
               $ref: '#/components/schemas/SigningRequest'
         required: true
       responses:
-        "400":
-          description: Bad request
-          content:
-            application/problem+json:
-              schema:
-                oneOf:
-                  - $ref: '#/components/schemas/Problem'
-                  - $ref: '#/components/schemas/ConstraintViolationProblem'
-        "500":
-          description: Internal Server error
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
         "200":
           description: Successful operation
           content:
@@ -84,6 +86,26 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/CreateSigningResponse'
+        "400":
+          description: Bad request
+          content:
+            application/problem+json:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/Problem'
+                  - $ref: '#/components/schemas/ConstraintViolationProblem'
+        "502":
+          description: Bad Gateway
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
   /signings/{signingId}:
     get:
       tags:
@@ -97,6 +119,15 @@ paths:
           schema:
             type: string
       responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SigningInstance'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/SigningInstance'
         "400":
           description: Bad request
           content:
@@ -105,8 +136,8 @@ paths:
                 oneOf:
                   - $ref: '#/components/schemas/Problem'
                   - $ref: '#/components/schemas/ConstraintViolationProblem'
-        "404":
-          description: Not found
+        "502":
+          description: Bad Gateway
           content:
             application/problem+json:
               schema:
@@ -117,15 +148,12 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-        "200":
-          description: Successful operation
+        "404":
+          description: Not found
           content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/SigningInstance'
             application/problem+json:
               schema:
-                $ref: '#/components/schemas/SigningInstance'
+                $ref: '#/components/schemas/Problem'
     delete:
       tags:
         - Signings
@@ -146,20 +174,26 @@ paths:
                 oneOf:
                   - $ref: '#/components/schemas/Problem'
                   - $ref: '#/components/schemas/ConstraintViolationProblem'
-        "404":
-          description: Not found
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
-        "500":
-          description: Internal Server error
+        "502":
+          description: Bad Gateway
           content:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
         "204":
           description: Successful operation
+        "500":
+          description: Internal Server error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "404":
+          description: Not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
     patch:
       tags:
         - Signings
@@ -186,20 +220,26 @@ paths:
                 oneOf:
                   - $ref: '#/components/schemas/Problem'
                   - $ref: '#/components/schemas/ConstraintViolationProblem'
-        "404":
-          description: Not found
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
-        "500":
-          description: Internal Server error
+        "502":
+          description: Bad Gateway
           content:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
         "204":
           description: Successful operation
+        "500":
+          description: Internal Server error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "404":
+          description: Not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
   /signings/{signingId}/signatory/{partyId}:
     get:
       tags:
@@ -218,6 +258,15 @@ paths:
           schema:
             type: string
       responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Signatory'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Signatory'
         "400":
           description: Bad request
           content:
@@ -226,8 +275,8 @@ paths:
                 oneOf:
                   - $ref: '#/components/schemas/Problem'
                   - $ref: '#/components/schemas/ConstraintViolationProblem'
-        "404":
-          description: Not found
+        "502":
+          description: Bad Gateway
           content:
             application/problem+json:
               schema:
@@ -238,15 +287,12 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-        "200":
-          description: Successful operation
+        "404":
+          description: Not found
           content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Signatory'
             application/problem+json:
               schema:
-                $ref: '#/components/schemas/Signatory'
+                $ref: '#/components/schemas/Problem'
   /api-docs:
     get:
       tags:
@@ -451,8 +497,12 @@ components:
           $ref: '#/components/schemas/Reminder'
         initiator:
           $ref: '#/components/schemas/Party'
-        additionalParty:
-          $ref: '#/components/schemas/Party'
+        additionalParties:
+          type: array
+          description: A party that is not part of the signing process but will get
+            a copy of the signed document when the signing instance is completed.
+          items:
+            $ref: '#/components/schemas/Party'
         signatories:
           type: array
           description: The parties that will sign the documents.
@@ -483,11 +533,11 @@ components:
     StatusType:
       type: object
       properties:
-        reasonPhrase:
-          type: string
         statusCode:
           type: integer
           format: int32
+        reasonPhrase:
+          type: string
     ConstraintViolationProblem:
       type: object
       properties:
